center search bar, fix spacing

--- a/src/components/GigPost/GigPost.css
+++ b/src/components/GigPost/GigPost.css
@@ -22,11 +22,12 @@
 .full-container {
   position: absolute;
   margin: 0px 0px 0px 0px;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 40%;
   transform: translate(-50%, -50%);
   width: 400px;
-  padding: 8% 4% 20% 4%;
+  padding: 4rem;
+  /* padding: 8% 4% 20% 4%; */
   z-index: 100;
   /* transform: rotate(-12deg); */
 }
