--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .link {
-  margin-left: 10%;
-  padding: 0;
+  /* margin-left: 10%; */
+  padding: 0 1rem;
   color: black;
   font-weight: 600;
   font-family: 'Hind Madurai';
